--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "author": "N1Anoobis <mrbond84@hotmail.com>",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "socket.io": "2.2.0"
   },
-  "scripts":{
+  "scripts": {
     "start": "nodemon server.js"
   }
 }
