--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-to-do",
+  "homepage": "https://n1anoobis.github.io/-WebSocket-react-to-do/",
   "version": "1.0.0",
   "main": "index.js",
   "repository": "https://github.com/N1Anoobis/react-to-do.git",
@@ -14,6 +15,8 @@
     "socket.io-client": "^2.3.0"
   },
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   }
 }
